# Library-Management-Software-CS3332

./: LICENSE  README.md  config.py  pyproject.toml  requirements.txt
Diagrams/Database/: EntityRelationshipDiagrams.md
Diagrams/Model-View-Controller/: SequenceDiagrams.md
src/: __init__.py  commands.py  db.py  extensions.py  fake_data.sql  schema.sql
src/authorization/: __init__.py
src/book/: __init__.py
src/book/controller/: book_controller.py
src/book/service/: DELETE.py  GET.py  POST.py  PUT.py  book_service.py
src/book/util/: dto.py
src/mail/: __init__.py
src/main/: __init__.py  routes.py
src/models/: author.py  book.py  book_author.py  book_copy.py  book_genre.py  book_status.py  deposit.py  genre.py  membership_type.py  otp.py  renewal_status.py  reservation.py  reservation_status.py  user.py  user_role.py
src/otp/: __init__.py
src/static/: style.css
src/templates/: index.html  otp_email_template.html
src/user/: __init__.py
src/user/controller/: user_controller.py
src/user/service/: GET.py  POST.py  PUT.py  user_service.py  validation.py
src/user/util/: dto.py
