[project]
name = "Library_System_Management"
version = "1.0.0"
description = "The basic library System Management web app built in Flask Back-end"
dependencies = [
    "flask",
    "Flask-Cors",
    "flask-restx",         
    "Flask-SQLAlchemy",  
    "Flask-Login",
    "Flask-Mail",      
    "python-dotenv",
    "requests",
    "pyotp",
]